--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-hello
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset = "UTF-8">
+        <meta name = "viewport"content ="width = device-width,initial-scale=1.0">
+        <title>Event Registration Form</title>
+    <link rel="stylesheet"href="style.css">
+    </head>
+    <body>
+        <div class="container">
+        <h1>Event Registration</h1>
+    <form id="registration Form">
+        <div class="form-group">
+        <label for="name">Full name</label>
+    <input type="text"id="name"name="name"placeholder="enter your full name"required>
+</div>
+<div class="form-group">
+<label for="email">Email</label>
+<input type="email"id="email"name="email"placeholder="enter your email"required>
+</div>
+<div class="form-group">
+<label for="phone">phone number</label>
+<input type="tel"id="phone"name="phone"placeholder="enter your phone number"required>
+</div>
+<div class="form-group">
+    <label for ="event">event<label>
+        <select id="event"name="event"required>
+            <option value=""disabled selected>select an event</option>
+            <option value="workshop">workshop</option>
+            <option value="networking">networking event</option>
+            </select>
+</div>
+<button type="submit">register</button>
+    </form>
+<p id="successmessage"class="hidden">Registration successful! Thank you for signing up</p>
+</div>
+<script src="script.js"></script>
+    </body>
+</html>
